--- a/pages/danisma-kurulu.html
+++ b/pages/danisma-kurulu.html
@@ -175,7 +175,7 @@
  <main id="main" class="dk-content">
  <div class="dk-intro">
  <h2>Multidisipliner Uzman Kadro</h2>
- <p>Danışma kurulumuz, kilo yönetimi ve sağlıklı yaşam alanında farklı uzmanlıklara sahip profesyonellerden oluşur. Her içerik, ilgili uzmanlık alanındaki kurul üyemiz tarafından incelenir.</p>
+ <p>Obezite ve kilo yönetimi, tek bir tıp dalının kapsamına sığmayan çok boyutlu bir sağlık sorunudur. Bu nedenle danışma kurulumuz; gastroenteroloji, endokrinoloji, bariatrik cerrahi, beslenme bilimleri, egzersiz fizyolojisi ve davranış bilimlerinden uzmanları bir araya getirir. Her içerik, ilgili uzmanlık alanındaki kurul üyemiz tarafından bilimsel doğruluk, güncellik ve klinik uygulanabilirlik açısından incelenir. Kurul üyelerimiz gönüllülük esasıyla çalışmakta olup hiçbir ticari bağlantıları bulunmamaktadır.</p>
  </div>
 
  <div class="dk-grid">
@@ -188,14 +188,16 @@
  <span class="dk-role">Kurul Başkanı</span>
  </div>
  </div>
- <p class="dk-desc">Sindirim sistemi hastalıkları, endoskopik prosedürler ve gastrointestinal cerrahinin kilo yönetimindeki rolü konularında içerikleri inceler.</p>
+ <p class="dk-desc">Sindirim sistemi hastalıkları, ileri endoskopik prosedürler (ESG, intragastrik balon), gastrointestinal motilite bozuklukları ve bariatrik endoskopinin kilo yönetimindeki rolü konularında içerikleri inceler. GLP-1 agonistlerinin gastrointestinal yan etkileri ve etkileşimleri konusunda da danışmanlık sağlar. Endoskopik sleeve gastroplasti (ESG) ile ilgili klinik verilerin ve hasta seçim kriterlerinin doğruluğunu denetler.</p>
  <div class="dk-areas">
  <h4>İnceleme Alanları</h4>
  <div class="dk-tags">
- <span class="dk-tag">Endoskopik Sleeve</span>
- <span class="dk-tag">Mide Balonu</span>
+ <span class="dk-tag">Endoskopik Sleeve (ESG)</span>
+ <span class="dk-tag">İntragastrik Balon</span>
  <span class="dk-tag">Sindirim Sağlığı</span>
  <span class="dk-tag">GİS Prosedürler</span>
+ <span class="dk-tag">Bariatrik Endoskopi</span>
+ <span class="dk-tag">GLP-1 GİS Etkileri</span>
  </div>
  </div>
  </div>
