--- a/pages/hakkimizda.html
+++ b/pages/hakkimizda.html
@@ -260,9 +260,10 @@
  <p style="color:#E8963E;font-weight:600;font-size:0.85rem;text-transform:uppercase;letter-spacing:1px;margin-bottom:0.5rem;">Misyonumuz</p>
  <p style="font-family:'Playfair Display',serif;font-size:1.5rem;font-weight:400;font-style:italic;color:#195157;margin-bottom:1rem;letter-spacing:0.01em;">Türkiye uzun yaşasın diye.</p>
  <h2>Türkiye'nin Bağımsız, Kanıta Dayalı Kilo Yönetimi Platformu</h2>
- <p>UzunYaşa, sağlık bilgisinin ticari çıkarlardan bağımsız, bilimsel kanıtlara dayalı ve herkes için anlaşılır olması gerektiğine inanır.</p>
- <p>Amacımız, insanların kendi sağlıkları hakkında bilinçli kararlar vermelerine yardımcı olmak. Ne satıyoruz, ne de sponsor alıyoruz. Sadece bilim konuşuyoruz.</p>
- <p style="margin-top:1rem;"><strong>Vizyonumuz:</strong> Türkiye'nin kilo yönetimi ve sağlıklı yaşam konusunda başvurulan ilk ve en güvenilir kaynağı olmak.</p>
+ <p>UzunYaşa, Tıpta Yapay Zeka Derneği (TYZD) bünyesinde kurulan, kar amacı gütmeyen bağımsız bir sağlık bilgi platformudur. Sağlık bilgisinin ticari çıkarlardan bağımsız, hakemli bilimsel araştırmalara dayalı ve her eğitim seviyesinden okuyucu için anlaşılır olması gerektiğine inanırız.</p>
+ <p>Amacımız, Türkiye'deki bireylerin kendi sağlıkları hakkında bilinçli ve doğru kararlar vermelerine yardımcı olmaktır. Hiçbir ürün satmıyoruz, hiçbir ilaç firması veya klinikten sponsorluk kabul etmiyoruz. Gelirlerimiz tamamen bağımsız kaynaklardan oluşur. Referans aldığımız 200'den fazla bilimsel kaynak, PubMed, Cochrane ve NEJM gibi uluslararası veri tabanlarından seçilmektedir.</p>
+ <p style="margin-top:1rem;"><strong>Vizyonumuz:</strong> Türkiye'nin obezite, kilo yönetimi ve sağlıklı yaşam konusunda ulusal düzeyde başvurulan ilk ve en güvenilir dijital kaynağı olmak; sağlık okuryazarlığını artırarak toplum sağlığına katkıda bulunmak.</p>
+ <p style="margin-top:0.75rem;"><strong>Farkımız:</strong> Türkiye'ye özgü veriler (TÜİK, Sağlık Bakanlığı), multidisipliner danışma kurulu denetimi, yapay zeka destekli kişiselleştirme ve tamamen ücretsiz erişim ile geleneksel sağlık bilgi platformlarından ayrılıyoruz.</p>
  <div style="display:flex;gap:0.75rem;flex-wrap:wrap;margin-top:1.5rem;">
  <a href="editoryal-politika.html" style="display:inline-block;padding:0.6rem 1.25rem;background:#0D7377;color:white;border-radius:8px;text-decoration:none;font-size:0.9rem;font-weight:600;"> Editoryal Politika</a>
  <a href="danisma-kurulu.html" style="display:inline-block;padding:0.6rem 1.25rem;border:2px solid #0D7377;color:#0D7377;border-radius:8px;text-decoration:none;font-size:0.9rem;font-weight:600;"> Danışma Kurulu</a>
@@ -325,7 +326,7 @@
  </svg>
  </div>
  <h3>Bilimsel Doğruluk</h3>
- <p>Tüm içeriklerimiz hakemli dergilerde yayınlanan araştırmalara dayanır. Kaynakları şeffaf şekilde paylaşırız.</p>
+ <p>Tüm içeriklerimiz hakemli dergilerde yayınlanan araştırmalara dayanır. Meta-analizler ve sistematik derlemeler birincil kaynağımızdır. Kaynakları DOI numarası veya PubMed linki ile şeffaf şekilde paylaşırız.</p>
  </div>
 
  <div class="value-card hub-fade-in">
@@ -335,7 +336,7 @@
  </svg>
  </div>
  <h3>Bağımsızlık</h3>
- <p>Hiçbir ilaç firması, takviye markası veya klinikten sponsor almıyoruz. Önerilerimiz tamamen tarafsızdır.</p>
+ <p>Hiçbir ilaç firması, takviye markası, klinik veya bireysel hekimden sponsorluk veya maddi destek almıyoruz. Reklam gelirleri editoryal kararlarımızı etkilemez. Önerilerimiz tamamen tarafsızdır.</p>
  </div>
 
  <div class="value-card hub-fade-in">
@@ -348,7 +349,7 @@
  </svg>
  </div>
  <h3>Erişilebilirlik</h3>
- <p>Karmaşık tıbbi bilgiyi herkesin anlayabileceği dilde sunuyoruz. Sağlık okuryazarlığını artırıyoruz.</p>
+ <p>Karmaşık tıbbi bilgiyi herkesin anlayabileceği dilde sunuyoruz. Tüm içeriklerimiz ücretsizdir. Sağlık okuryazarlığını artırarak bireysel ve toplumsal sağlık kararlarının kalitesini yükseltmeyi hedefliyoruz.</p>
  </div>
 
  <div class="value-card hub-fade-in">
@@ -637,28 +638,28 @@
  <div class="timeline-dot">2023</div>
  <div class="timeline-content">
  <h4>Fikir Doğuyor</h4>
- <p>Türkiye'de güvenilir, bağımsız sağlık bilgisi eksikliğini gidermek için yola çıktık.</p>
+ <p>Türkiye'de obezite oranının %21'i aşması ve güvenilir Türkçe sağlık bilgisi eksikliği karşısında, kanıta dayalı bağımsız bir platform kurma kararı alındı. Tıpta Yapay Zeka Derneği bünyesinde proje başlatıldı.</p>
  </div>
  </div>
  <div class="timeline-item">
  <div class="timeline-dot">2024</div>
  <div class="timeline-content">
  <h4>Platform Kuruluyor</h4>
- <p>Danışma kurulumuz oluştu, ilk içeriklerimizi yayınladık, 10.000 kullanıcıya ulaştık.</p>
+ <p>Gastroenteroloji, endokrinoloji, kardiyoloji, beslenme ve psikiyatri alanlarından uzmanlarla danışma kurulu oluşturuldu. İlk 30 kanıta dayalı içerik yayınlandı, 10.000 okuyucuya ulaşıldı. BMI ve kalori hesaplayıcı araçları hayata geçirildi.</p>
  </div>
  </div>
  <div class="timeline-item">
  <div class="timeline-dot">2025</div>
  <div class="timeline-content">
- <h4>Büyüme & Genişleme</h4>
- <p>75+ sayfa içerik, 200+ bilimsel kaynak, kişiselleştirilmiş araçlar ve AI asistan ile Türkiye'nin en kapsamlı platformu olduk.</p>
+ <h4>Büyüme ve Genişleme</h4>
+ <p>75'ten fazla sayfa içerik, 200'den fazla bilimsel kaynak referansı, kişiselleştirilmiş sağlık değerlendirme testi ve Ecem AI beslenme asistanı ile Türkiye'nin en kapsamlı bağımsız kilo yönetimi platformu haline gelindi. GLP-1 ilaçları, bariatrik cerrahi ve endoskopik tedavi rehberleri büyük ilgi gördü.</p>
  </div>
  </div>
  <div class="timeline-item">
  <div class="timeline-dot">2026</div>
  <div class="timeline-content">
  <h4>Kurumsal Yapılanma</h4>
- <p><a href="danisma-kurulu.html" style="color:#0D7377;">Danışma kurulumuz</a> genişledi, <a href="editoryal-politika.html" style="color:#0D7377;">editoryal politikamız</a> resmileşti. Topluluk özelliklerini hayata geçiriyoruz.</p>
+ <p><a href="danisma-kurulu.html" style="color:#0D7377;">Danışma kurulumuz</a> yeni uzmanlık alanlarıyla genişledi, <a href="editoryal-politika.html" style="color:#0D7377;">editoryal politikamız</a> uluslararası standartlarda resmileştirildi. GRADE kanıt değerlendirme sistemi benimsendi. Topluluk özellikleri ve kişiselleştirilmiş egzersiz programı geliştirme aşamasında.</p>
  </div>
  </div>
  </div>
