--- a/pages/tedavi/karsilastirma.html
+++ b/pages/tedavi/karsilastirma.html
@@ -44,6 +44,7 @@
  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
  <link rel="stylesheet" href="../../styles/main.css">
+ <link rel="stylesheet" href="../../styles/animations.css">
  <style>
  /* ===== COMPARISON TOOL PREMIUM STYLES ===== */
  :root {
@@ -1039,5 +1040,6 @@
 
 })();
 </script>
+<script src="../../scripts/animations.js"></script>
 </body>
 </html>
